resolve img not showing

--- a/assets/sass/layout/style.scss
+++ b/assets/sass/layout/style.scss
@@ -2066,10 +2066,6 @@ h3.slide-title {
 	background-color: #4d4d6c;
 }
 
-.is-dark .shape6 > .inside {
-	background-image: url("../img/shape6-dark.png");
-}
-
 .is-dark .image-card-dark {
 	background-color: #1f2044;
 }
